@@ -118,7 +118,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
 
   /** Description of the Field. */
   public final static String version = "v2.04";
-  public final static int buildVer = 42;
+  public final static int buildVer = 43;
   
   public static int getBuild()
   {
