@@ -1,4 +1,4 @@
-# Version 2.04 build 14
+# Version 2.05 build 1
 #
 # Ini style final detailing as much protocol-specific information as possible.
 #
@@ -451,9 +451,16 @@ DeviceTranslator=Translator(lsb,3,8,8) Translator(lsb,1,8,16) \
                  Translator(lsb,0,8,24) Translator(lsb,2,8,32) XorCheck(1,7,0,8,8) 
 FixedData=00 23 07 77 E1 
 Code.S3C80=43 8B 52 8B 12 CF 4D 08 08 01 20 03 31 01 20 00 FF D2 DC 11 94 08 B6 E6 0D 01 18 09 37 10 03 E6 0D 12 37 12 03 E4 05 06 E4 04 09 18 03 27 1F 08 E6 01 03 8D 01 46
+#Code.MAXQ610=33 69 52 0E 16 00 40 00 16 00 15 00 05 10 56 01 AB 00 00 80 10 56 08 D6 02 00 D3 D2 00 56 08 D0 01 17 D5 D5 80 E2 D4 04 73 74 75 71 08 56 08 D6 01 10 B8 00 11
+Code.MAXQ610=33 69 52 0E 16 00 40 00 16 00 15 00 05 10 56 01 AB 00 00 80 18 56 08 D6 02 00 D3 D2 00 10 D7 00 20 56 0C D0 D1 17 D5 D5 80 17 D7 D7 80 E2 C4 A4 73 74 75 71 30 56 10 D5 03 00 D5 D7 00 10 D8 00 01 57 24 00 00 10 95 00 D4 10 96 00 04 56 10 D8 01 10 D8 00 00 5A 0D 00 00 16 BA BA FE 56 08 D6 01 10 B8 00 11
 Notes= All known examples of the Apple protocol use device numbers 238 (Standard) or 224 (Pairing). \ 
  Use OBC=1 to pair the receiver to the remote ID, and OBC=2 to unpair.  If Repeat=Long is selected, \
-at least 18 repeats of the IR signal are sent, even for short button presses.
+at least 18 repeats of the IR signal are sent, even for short button presses. \n\n\
+The MAXQ executor has an additional feature to emulate the behavior of the newer Apple remote.  If \
+the OBC is >= 32 then a frame with that OBC is sent once, followed by a frame with OBC=2 (and following \
+ditto repeats while the key is held).  This behavior is used in the Apple remote with OBCs 46 and 47 to \
+provide separate keys for two functions that shared the same key with OBC=2 in the older remote, while \
+retaining backward compatibility.
 
 [Audiovox]
 PID=00 5D
